# file_search_engine

./: CMakeLists.txt  config.json  requests.json
include/: inverted_index.h  json_converter.h  mainwindow.h  search_server.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: inverted_index.cpp  json_converter.cpp  main.cpp  main1.cpp  mainwindow.cpp  search_server.cpp
test/: CMakeLists.txt
test/test_inverted_index/: CMakeLists.txt  tst_test_inverted_index.cpp
test/test_search_server/: CMakeLists.txt  tst_test_search_server.cpp
